# wasm-groth16-verifier

./: .gitignore  Cargo.toml  README.md  index.html
js_demo/: index.html
js_demo/pkg/: README.md  package.json  wasm_groth16_verifier.d.ts  wasm_groth16_verifier.js  wasm_groth16_verifier_bg.wasm  wasm_groth16_verifier_bg.wasm.d.ts
src/: data_structures.rs  lib.rs  proof_wrap.rs  verify_utils.rs  verifying_key_wrap.rs
